@@ -1,3 +1,10 @@
+2002-04-21  Masatake YAMATO  <yamato@redhat.com>
+
+	* autotrace.h (struct _at_fitting_opts_type): Rename
+	`filter_iteration_count' to `filter_iterations' in
+	order to make the field and its associated option name 
+	same.
+
 2002-04-16  Masatake YAMATO  <yamato@redhat.com>
 
 	* autotrace.dsp: s/VERSION/AUTOTRACE_VERSION/g.
